Refactor in a playfield controller for cursor

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ function die(message) {
 }
 
 function extendDefault(target, defaults, options) {
-    if (typeof options !== 'object' || !object) {
+    if (typeof options !== 'object' || !options) {
         options = { };
     }
 
