--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 
+<meta charset="utf-8" />
 <title>PanPan</title>
 
 </head>
 <body>
 
 <div id="flashContent" style="width: 800px; height: 480px;"></div>
+<p>Use arrow keys and "X" like a boss.</p>
 
 <script src="spaceport/spaceport.js"></script>
 <script>sp.bridge.swfPath = 'spaceport/Spaceport.swf';</script>
