Include spaceport-html5.js

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <p>Use arrow keys and "X" like a boss.</p>
 
 <script src="spaceport/spaceport.js"></script>
+<script src="spaceport/spaceport-html5.js"></script>
 <script>sp.bridge.swfPath = 'spaceport/Spaceport.swf';</script>
 <script src="vendor/unrequire/lib/unrequire.js"></script>
 
