--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="flashContent" style="width: 800px; height: 480px;"></div>
 <p>Use arrow keys and "X" like a boss.</p>
 
-<script>if (typeof __PLATFORM === 'undefined') __PLATFORM = 'flash';</script>
+<script>if (typeof __PLATFORM === 'undefined' && !/platform=/.test(location.search)) __PLATFORM = 'flash';</script>
 <script src="spaceport/spaceport.js"></script>
 <script src="spaceport/spaceport-html5.js"></script>
 <script>sp.bridge.swfPath = 'spaceport/Spaceport.swf';</script>
