--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
 <meta charset="utf-8" />
 <title>PanPan</title>
 
+<style>
+#flashContent {
+    margin: 2em auto;
+    width: 640px;
+    height: 480px;
+    overflow: hidden;
+    display: absolute;
+}
+</style>
+
 </head>
 <body>
 
-<div id="flashContent" style="width: 800px; height: 480px;"></div>
-<p>Use arrow keys and "X" like a boss.</p>
+<div id="flashContent"></div>
 
 <script>if (typeof __PLATFORM === 'undefined' && !/platform=/.test(location.search)) __PLATFORM = 'flash';</script>
 <script src="spaceport/spaceport.js"></script>
